# LLMClimate2024

./: .gitignore  Dockerfile  GPT_Evaluation.ipynb  README.md  docker-compose.yaml  extractive_summarisation_evaluation.py  gpt_summary_evaluation.py  pyproject.toml  requirements.txt  retrieval_evaluation.py  summary_evaluation.py  tools.py
all_data/AR6/: AR6.yaml
config/: config.yaml
data_processing/: AR5.yaml  AR5_full.txt  AR6.yaml  AR6_full.txt  AR6_new.yaml  README.md  create_dataset_from_report.py  postprocessing.py  process_pdfs.ipynb  summary_policy_AR5.txt  summary_policy_AR6.txt  summary_policy_AR6_topics.json
eval_flask_app/: app.py  evaluation_results.csv  wandb_results.csv
eval_flask_app/templates/: index.html  index2.html
exp/ClimaBench/: LLM_ClimaBench.ipynb  utils.py
exp/SumIPCC/: docker-compose.yaml  pyproject.toml  summary_evaluation.py  template.yaml  utils.py
exp/SumIPCC/data_processing/: AR4_full.txt  AR6.yaml  AR6_full.txt  AR6_postprocessed.yaml  postprocessing.py  (+6 more)
sumipcc_dataset/: sumipcc_dataset.py
wandb/: latest-run
wandb/run-20240315_132741-ogfg7euu/: run-ogfg7euu.wandb
wandb/run-20240315_132935-ozl4c0j3/: run-ozl4c0j3.wandb
wandb/run-20240315_133853-g9oezq8w/: run-g9oezq8w.wandb
wandb/run-20240315_134135-d502yafc/: run-d502yafc.wandb
wandb/run-20240315_134225-x3xe5x34/: run-x3xe5x34.wandb
wandb/run-20240316_104357-6iaqu0lu/: run-6iaqu0lu.wandb
wandb/run-20240316_104953-3w8o6z2v/: run-3w8o6z2v.wandb
wandb/run-20240316_105541-8ehzi5w1/: run-8ehzi5w1.wandb
wandb/run-20240316_115103-50ja0wy7/: run-50ja0wy7.wandb
(+22 files in other folders)
