[tool.poetry]
name = "SumIPCC"
version = "0.1.0"
description = "Topic-driven summarization of Climate Reports via Large Language Model"
authors = ["Leonardo Catalano, Tommaso Colella, Iacopo Ghinassi <i.ghinassi@qmul.ac.uk>"]

[tool.poetry.dependencies]
python = "3.8.10"
torch = "^2"
transformers = "4.30"
datasets = "2.14.6"
accelerate = "0.16"
tokenizers = "0.12.1"
nltk = "3.8.1"
protobuf = "^3.20.3"
rouge-score = "^0.1.2"
evaluate = "^0.4.1"
prettytable = "^3.10.0"
wandb = "~0"
einops = "0.7.0"
openai = "1.14.0"
faiss_gpu = "1.7.2"
sentence-transformers = "2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

